--- a/app/templates/library.html
+++ b/app/templates/library.html
@@ -62,7 +62,7 @@
     <div id="addEditBookModal" class="modal">
         <div class="modal-content">
             <form id="bookForm">
-                <input type="hidden" id="formModeInput" value="add"> <!-- TODO: change that??? -->
+                <input type="hidden" id="formModeInput">
 
                 <div>
                     <label for="formMode-title">Titre :</label>
