--- a/app/templates/library.html
+++ b/app/templates/library.html
@@ -146,6 +146,13 @@
         </div>
     </div>
 
+    <div id="barcodeModal" class="modal">
+        <div class="modal-content">
+            <div id="scanner-container">
+            </div>
+        </div>
+    </div>
+
     <script src="{{ url_for('static', filename='library.js') }}"></script>
 
 {% endblock %}
